--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -17,14 +17,12 @@
 body {
     background: var(--bg);
     font-family: var(--font);
-    display: flex;
-    align-items: center;
-    justify-content: center;
     user-select: none;
 }
 
 main {
-    width: 100vw;
+    max-width: 1000px;
+    margin: auto;
     background: var(--app);
     border-radius: 0 0 15px 15px;
     box-shadow: var(--shadow);
@@ -36,11 +34,27 @@ main {
     justify-content: space-evenly;
 }
 
+main #info {
+    position: absolute;
+    line-height: 10px;
+    width: 30px;
+    right: 10px;
+    top: 10px;
+    padding: 10px;
+    background: white;
+    text-align: center;
+    color: lightskyblue;
+    font-weight: bold;
+    border: 1px solid lightskyblue;
+    border-radius: 50%;
+    box-shadow: var(--shadow);
+}
+
 main img {
     width: 150px;
 }
 
-main input {
+main #itemInput {
     width: 80%;
     padding: 10px;
     border: 0;
@@ -59,12 +73,12 @@ main button {
     font-weight: bold;
 }
 
-main button#btn {
+main button#addBtn {
     background: rgb(82, 190, 82);
     box-shadow: 0 3px green;
 }
 
-main button#clear {
+main button#clearBtn {
     background: rgb(204, 52, 52);
     box-shadow: 0 3px brown;
     display: none;
@@ -87,4 +101,61 @@ main ul li {
     box-shadow: var(--shadow);
     padding: 10px;
     border-radius: 10px;
+}
+
+/* Modal */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 50px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal .modal-content {
+    width: 80%;
+    margin: auto;
+    padding: 20px;
+    background-color: whitesmoke;
+    border-radius: 15px;
+    color: var(--bg);
+}
+
+.modal .modal-content .modal-head {
+    display: flex;
+    align-items: center;
+    padding-bottom: 10px;
+    border-bottom: 1px solid var(--bg);
+    line-height: 25px;
+    font-weight: bold;
+}
+
+.modal .modal-content .modal-head :first-child {
+    flex-grow: 1;
+}
+
+.modal .modal-content .modal-head #closeBtn {
+    float: right;
+    font-size: 28px;
+    color: rgb(204, 52, 52);
+}
+
+.modal .modal-content .modal-head #closeBtn:hover {
+    color: var(--bg);
+}
+
+.modal .modal-content .modal-body ul {
+    padding-top: 10px;
+}
+
+.modal .modal-content .modal-body ul li {
+    list-style: inside;
+    margin: 10px 0;
 }
